samples/_failures_safe/1761644764_8a0c5c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6728b92e.c: In function ‘main’:
./samples/SAFE/__tmp_6728b92e.c:146:15: error: expected ‘;’ at end of input
  146 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_6728b92e.c:146:9: error: expected declaration or statement at end of input
  146 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_6728b92e.c:146:9: error: expected declaration or statement at end of input
